tests/snapshots/serde__display_float64array_many_bytes.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Float64Array([0, -1.5, 2, -3.5, NaN, -5.5, -Infinity, -0, Infinity])"
---
new Float64Array([
  0, -1.5, 2, -3.5, NaN, -5.5, -Infinity, -0,
  Infinity,
])
