tests/snapshots/serde__display_float64array_one_byte.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Float64Array([1.0])"
---
new Float64Array([
  1,
])
