tests/snapshots/serde__display_float64array_resizable.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Float64Array(new ArrayBuffer(8, { maxByteLength: 16 }))"
---
const v0 = new ArrayBuffer(8, { maxByteLength: 16 });
new Float64Array(v0)
