tests/snapshots/serde__display_float64array_subarray.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Float64Array([1, 2]).subarray(1, 2)"
---
new Float64Array([
  1, 2,
]).subarray(1, 2)
