tests/snapshots/serde__display_float64array_two_bytes.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Float64Array([1.0, -2.5])"
---
new Float64Array([
  1, -2.5,
])
