tests/snapshots/serde__display_float64array_zeroed.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Float64Array(1)"
---
new Float64Array(1)
