tests/snapshots/serde__display_float64array_zeroed2.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Float64Array([0, 0, 0])"
---
new Float64Array(3)
