tests/snapshots/serde__display_int16array_one_byte.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Int16Array([-1])"
---
new Int16Array([
  -0x01,
])
