tests/snapshots/serde__display_int16array_resizable.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Int16Array(new ArrayBuffer(2, { maxByteLength: 10 }))"
---
const v0 = new ArrayBuffer(2, { maxByteLength: 10 });
new Int16Array(v0)
